packages/yew-macro/tests/html_macro/for-fail.stderr
error: unexpected end of input, expected `in`
 --> tests/html_macro/for-fail.rs:6:9
  |
6 |     _ = ::yew::html!{for x};
  |         ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::yew::html` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected an expression
 --> tests/html_macro/for-fail.rs:7:9
  |
7 |     _ = ::yew::html!{for x in};
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::yew::html` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected curly braces
 --> tests/html_macro/for-fail.rs:8:9
  |
8 |     _ = ::yew::html!{for x in 0 .. 10};
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::yew::html` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate key for a node in a `for`-loop
       this will create elements with duplicate keys if the loop iterates more than once
  --> tests/html_macro/for-fail.rs:14:18
   |
14 |         <div key="duplicate" />
   |                  ^^^^^^^^^^^

error: duplicate key for a node in a `for`-loop
       this will create elements with duplicate keys if the loop iterates more than once
  --> tests/html_macro/for-fail.rs:18:19
   |
18 |         <div key={smth::KEY} />
   |                   ^^^^

error: unnecessary `<>...</>`. Children can be placed directly in the body
  --> tests/html_macro/for-fail.rs:23:9
   |
23 |         <><span>{"a"}</span><span>{"b"}</span></>
   |         ^^

error[E0308]: mismatched types
 --> tests/html_macro/for-fail.rs:9:26
  |
9 |     _ = ::yew::html!{for (x, y) in 0 .. 10 {
  |                          ^^^^^^    ------- this is an iterator with items of type `{integer}`
  |                          |
  |                          expected integer, found `(_, _)`
  |
  = note: expected type `{integer}`
            found tuple `(_, _)`
